# django-grafana

./: .git-blame-ignore-revs  .gitignore  MANIFEST.in  Makefile  setup.cfg  setup.py
grafana/: admin.py  client.py  models.py  urls.py  views.py
grafana/mutators/: __init__.py  null.py  refresh.py
grafana/templates/grafana/: annotation_list.html  dashboard_detail.html  dashboard_mutate.html  organization_detail.html  organization_list.html  organization_members.html  version_detail.html  version_list.html
grafana/templatetags/: grafana.py
