[metadata]
name = django-grafana
version = 0.2.0
license = MIT License
description = Management app for Grafana
url = https://github.com/kfdm/django-grafana
author = Paul Traylor
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP

[options]
packages = find:
python_requires = >=3.6, <4
include_package_data = True
install_requires =
    requests
    django>=3.2

[options.packages.find]
exclude = test

[options.entry_points]
powerplug.apps =
    grafana = grafana
powerplug.urls =
    grafana = grafana.urls
grafana.mutator =
    refresh = grafana.mutators.refresh:Refresh
    null = grafana.mutators.null:Null

[isort]
forced_separate = django,grafana
know_django = django
known_first_party = grafana
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
